--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,7 @@
 #Mon Jul 23 12:42:45 EDT 2018
 VERSION_MAJOR=2
 MYAPP_RELEASE_KEY_ALIAS=android-release-key
-android.useDeprecatedNdk=true
+# android.useDeprecatedNdk=true
 VERSION_BUILD=127
 classpath='com.android.tools.build\:gradle\:3.0.1'
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx4608M
 VERSION_PATCH=0
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
 VERSION_MINOR=0
-android.enableAapt2=false
+# android.enableAapt2=false
 # compileSdkVersion=27
 # targetSdkVersion=26
 # buildToolsVersion=27.0.3
@@ -18,3 +18,4 @@ android.enableAapt2=false
 # minSdkVersion=19
 android.useAndroidX=true
 android.enableJetifier=true
+android.enableBuildCache=true
