--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ import org.gradle.util.VersionNumber;
 
 buildscript {
     repositories {
+        //jcenter()
         google()
         jcenter()
         maven {
@@ -13,8 +14,9 @@ buildscript {
     }
     dependencies {
         // classpath 'com.android.tools.build:gradle:3.4.0'
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath 'com.google.gms:google-services:4.3.3' // Needed for Firebase Analytics
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -73,10 +75,11 @@ ext {
     googlePlayServicesVersion   = "11.8.0"
     minSdkVersion               = 19
     zoomSdkVersion              = '7.0.11'
+    kotlinVersion = "1.3.72"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
+wrapper {
+//    gradleVersion = '4.4'
     distributionUrl = distributionUrl.replace("bin", "all")
 }
 
