--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 include ':app'
+include ':react-native-app-auth'
+project(':react-native-app-auth').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-app-auth/android')
 include ':react-native-document-reader-core-fullrfid'
 project(':react-native-document-reader-core-fullrfid').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-document-reader-core-fullrfid/android')
 include ':react-native-document-reader-api'
