--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nibble": "eslint-nibble Components/ Store/ utils/ index.common.js"
   },
   "dependencies": {
+    "@react-native-community/clipboard": "http://registry.npmjs.org/@react-native-community/clipboard/-/clipboard-1.2.3.tgz",
     "@react-native-community/netinfo": "^2.0.0",
     "@react-native-community/viewpager": "^2.0.2",
     "@tradle/aws-client": "^3.1.1",
@@ -79,6 +80,7 @@
     "@tradle/validate-model": "^7.1.24",
     "@tradle/validate-resource": "^4.3.4",
     "@tradle/yuki": "^1.5.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "any-promise": "1.3.0",
     "art": "^0.10.0",
     "assert": "^1.3.0",
@@ -145,6 +147,7 @@
     "react-native-accordion": "github:tradle/react-native-accordion#dev",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^0.6.1",
+    "react-native-app-auth": "^4.4.0",
     "react-native-app-intro": "github:tradle/react-native-app-intro#dev",
     "react-native-async-storage-rocks": "^2.2.0",
     "react-native-async-storage-snappy": "^1.2.1",
