--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -5,12 +5,12 @@ target 'Tradle' do
   # use_frameworks!
 
 #  pod 'PPBlinkID', '4.5.0'
-  pod 'DocumentReader', '~> 5.1'
-  pod 'DocumentReaderFull', '~> 5.1'
+  # pod 'DocumentReader', '~> 5.1'
+  # pod 'DocumentReaderFull', '~> 5.1'
   pod 'Branch', '0.27.1'
+  pod 'DocumentReader', '5.1.1194'
+  pod 'DocumentReaderFull', '5.1.2749'
 
-# DocumentReader 5.1.1194
-# DocumentReaderFull 5.1.2749
 
 #  pod 'Firebase/Core', '4.13.0'
 #  pod 'FirebaseAnalytics', '4.2.0'
