fix: upgrading packages

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -271,6 +271,7 @@ configurations.all {
 }
 
 dependencies {
+    implementation project(':react-native-localize')
     implementation project(':react-native-branch')
     implementation project(':react-native-document-reader-core-fullrfid')
     implementation project(':react-native-document-reader-api')
