--- a/package.json
+++ b/package.json
@@ -75,8 +75,9 @@
     "@tradle/promise-utils": "^1.1.0",
     "@tradle/protocol": "^5.0.1",
     "@tradle/qr-schema": "^2.0.5",
+    "@tradle/react-native-webview": "^5.12.1",
     "@tradle/restore": "github:tradle/restore",
-    "@tradle/validate-model": "^7.1.26",
+    "@tradle/validate-model": "^7.1.31",
     "@tradle/validate-resource": "^4.3.4",
     "@tradle/yuki": "^1.5.0",
     "any-promise": "1.3.0",
@@ -202,7 +203,6 @@
     "react-native-udp": "^2.0.0",
     "react-native-vector-icons": "^4.1.1",
     "react-native-view-pdf": "^0.8.6",
-    "react-native-webview": "^5.12.1",
     "react-timer-mixin": "^0.13.3",
     "readable-stream": "^1.0.33",
     "reflux": "^0.4.1",
