--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "react-native-switch-selector": "^1.0.7",
     "react-native-vector-icons": "^4.1.1",
     "react-native-web": "^0.8.9",
+    "react-native-web-linear-gradient": "^1.1.2",
     "react-native-webview": "^5.12.1",
     "react-signature-pad": "github:tradle/react-signature-pad",
     "react-timer-mixin": "^0.13.3",
