--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "nkey-curve25519": "^1.0.1",
     "nkey-ecdsa": "github:tradle/nkey-ecdsa#webcrypto",
     "nkey-ethereum": "github:tradle/nkey-ethereum",
+    "node-irr": "^2.0.3",
     "node-libs-browser": "^1.0.0",
     "object.omit": "^2.0.1",
     "object.pick": "^1.3.0",
@@ -197,16 +198,17 @@
     "ya-promise-queue": "1.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
     "@google-cloud/translate": "^1.1.0",
     "aws-sdk": "^2.407.0",
+    "babel-core": "^6.17.0",
     "babel-eslint": "7.1.1",
     "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-inline-package-json": "^2.0.0",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.22.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "https://registry.npmjs.org/babel-plugin-transform-inline-imports-commonjs/-/babel-plugin-transform-inline-imports-commonjs-1.2.0.tgz",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
