--- a/package.json
+++ b/package.json
@@ -123,11 +123,13 @@
     "map-stream": "0.0.6",
     "mockery": "^1.4.0",
     "moment": "^2.22.2",
+    "mustache": "^4.2.0",
     "nkey": "^2.0.2",
     "nkey-bitcoin": "^1.2.0",
     "nkey-curve25519": "^1.0.1",
     "nkey-ecdsa": "^1.1.0",
     "nkey-ethereum": "github:tradle/nkey-ethereum",
+    "node-irr": "^2.0.3",
     "object.omit": "^2.0.1",
     "object.pick": "^1.3.0",
     "once": "^1.4.0",
@@ -270,6 +272,7 @@
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "dedupe-deps": "~1.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^5.3.1",
