--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "es6-symbol": "~3.1.1",
     "events": "^1.1.0",
     "extend": "~2.0.1",
+    "financial": "^0.1.3",
     "getusermedia": "2.0.1",
     "graphql-request": "^1.8.2",
     "history": "^1.12.6",
