--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "compare-versions": "https://registry.npmjs.org/compare-versions/-/compare-versions-3.2.1.tgz",
     "console-browserify": "^1.1.0",
     "constants-browserify": "^1.0.0",
-    "core-js": "^3.23.5",
     "create-ecdh": "github:mvayngrib/createECDH#b5e05e40",
     "crypto-browserify": "^3.11.0",
     "dataurl-to-blob": "0.0.1",
@@ -136,8 +135,8 @@
     "punycode": "^1.3.2",
     "q": "^1.4.1",
     "querystring-es3": "^0.2.1",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "^16.3.1",
+    "react-dom": "16.3.2",
     "react-dropzone": "^3.13.4",
     "react-file-input": "github:mvayngrib/react-file-input",
     "react-infinite-calendar": "github:tradle/react-infinite-calendar#dist",
@@ -167,7 +166,7 @@
     "react-native-swipeout": "^2.3.3",
     "react-native-switch-selector": "^1.0.7",
     "react-native-vector-icons": "^4.1.1",
-    "react-native-web": "^0.11.7",
+    "react-native-web": "^0.8.9",
     "react-native-web-linear-gradient": "^1.1.2",
     "react-native-webview": "^5.12.1",
     "react-signature-pad": "github:tradle/react-signature-pad",
@@ -239,6 +238,7 @@
     "my-local-ip": "^1.0.0",
     "null-loader": "^0.1.1",
     "optimize-js-plugin": "0.0.4",
+    "patch-package": "^6.4.7",
     "react-hot-loader": "^1.3.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
