--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@tradle/errors": "^1.1.1",
     "@tradle/ethereum-adapter-etherscan": "github:tradle/ethereum-adapter-etherscan",
     "@tradle/keeper": "^3.4.0",
-    "@tradle/lens": "^1.3.1",
+    "@tradle/lens": "^1.3.2",
     "@tradle/models": "github:tradle/models",
     "@tradle/models-cloud": "github:tradle/models-cloud",
     "@tradle/models-corporate-onboarding": "github:tradle/models-corporate-onboarding",
@@ -77,7 +77,7 @@
     "@tradle/qr-schema": "^2.0.5",
     "@tradle/react-native-webview": "^5.12.1",
     "@tradle/restore": "github:tradle/restore",
-    "@tradle/validate-model": "^7.1.37",
+    "@tradle/validate-model": "^7.1.42",
     "@tradle/validate-resource": "^4.3.5",
     "@tradle/yuki": "^1.5.0",
     "any-promise": "1.3.0",
@@ -110,6 +110,8 @@
     "es6-symbol": "~3.1.1",
     "events": "^1.1.0",
     "extend": "~2.0.1",
+    "fast-xml-parser": "^4.0.8",
+    "financial": "^0.1.3",
     "graphql-request": "^1.8.2",
     "https-browserify": "0.0.1",
     "inherits": "^2.0.1",
@@ -134,6 +136,7 @@
     "object.pick": "^1.3.0",
     "once": "^1.4.0",
     "p-debounce": "^1.0.0",
+    "patch-package": "^6.4.7",
     "path-browserify": "0.0.0",
     "pify": "2.3.0",
     "process": "^0.11.2",
@@ -269,10 +272,10 @@
     "babel-jest": "^24.7.1",
     "babel-plugin-inline-package-json": "^2.0.0",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
-    "babel-plugin-transform-exponentiation-operator": "^6.24.1",
     "dedupe-deps": "~1.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^5.3.1",
@@ -280,7 +283,6 @@
     "eslint-plugin-react": "6.9.0",
     "eslint-plugin-react-native": "^3.2.1",
     "eslint-plugin-standard": "^1.3.2",
-    "fast-xml-parser": "^3.12.10",
     "husky": "^0.13.2",
     "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.53.1",
